--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Master's Student at CUNY</a></li>
+							<li><a href="#intro">Home</a></li>
 							<li><a href="#one">About Me</a></li>
 							<li><a href="#two">Research</a></li>
 							<li><a href="#three">Contact Me</a></li>
@@ -34,9 +34,10 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Justin Bopp</h1>
+							<p>Master's Student in Astrophysics at CUNY Graduate Center</p>
+							<p>Guest Researcher at American Museum of Natural History</p>
+							<p>Guest Researcher at Center for Computational Astrophysics at the Flatiron Institute</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
