--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Justin Bopp</h1>
+								<p>Master's Student in Astrophysics at CUNY Graduate Center</p>
 							</div>
 						</div>
 						<nav>
