--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Justin Bopp</h1>
-								<p>Master's Student in Astrophysics at CUNY Graduate Center</p>
-								<p>Visiting Scientist at American Museum of Natural History</p>
-								<p>Guest Researcher at Center for Computational Astrophysics</p>
+								<p>Master's Student in Astrophysics at CUNY Graduate Center
+								<br>Visiting Scientist at American Museum of Natural History
+								<br>Guest Researcher at Center for Computational Astrophysics</p>
 							</div>
 						</div>
 						<nav>
