--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="image main"><img src="images/Headshot.jpg" alt=""</span>
+							<span class="image main"><img src="images/Headshot.jpg" alt= " "  width="300" height="400" </span>
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Justin Bopp</h1>
+								<h1>Justin Bopp, B.S.</h1>
 								<p>Master's Student in Astrophysics at CUNY Graduate Center
 								<br>Visiting Scientist at American Museum of Natural History
 								<br>Guest Researcher at Center for Computational Astrophysics</p>
