--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
-							<span class="image main"><img src="images/Headshot.jpg" alt= " "  width="400" height="400" </span>
+						<div class="image">
+							<span class="image avatar"><img src="images/Headshot.jpg" alt= " "  width="400" height="400" </span>
 						</div>
 						<div class="content">
 							<div class="inner">
