--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 							<article id="work">
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/PhotoZ_Graph.png" alt="" /></span>
+								<center><b><font size="5"><a name="metal">PhotoZ Redshift Estimator</a></b></font></center>
 								<p>Photometric redshifts (photo-zʼs) are an essential part of every cosmological science goal of the Large Synoptic Survey Telescope (LSST), including studies of large-scale structure, weak lensing, galaxy clusters, and supernova host galaxies (Ivezić et al. 2008). This estimator is a modified version of Graham et al. 2020 for use in the RSP with the DP0.2 dataset. The color-matched nearest-neighbors (CMNN) photo-z estimator provides photometric redshifts with an accuracy that is directly dependent on (and only on) the quality of the simulated observed photometry which depends directly and only on
 								the 5σ limiting magnitudes (i.e., the LSST survey depths) (Graham et al. 2020). This makes it an ideal tool for early redshift estimation for the early photometric data from the Rubin Observatory.</p>
 								<p>Creating Test and Training Sets:<br>
