--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<li><a href="#intro">About Me</a></li>
 								<li><a href="#work">Research</a></li>
 								<li><a href="#about">CV</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<!--<li><a href="#contact">Contact</a></li>-->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
