--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<ul>
 								<li><a href="#intro">About Me</a></li>
 								<li><a href="#work">Research</a></li>
-								<li><a href="#about">CV</a></li>
+								<li><a href="images/Bopp_CV_082623.pdf">CV</a></li>
 								<!--<li><a href="#contact">Contact</a></li>-->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
