--- a/index.html
+++ b/index.html
@@ -55,22 +55,33 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Research</h2>
-								<span class="image main"><img src="images/PhotoZ_Graph.png" alt="" /></span>
-								<center><b><font size="5"><a name="metal">PhotoZ Redshift Estimator</a></b></font></center>
-								<p>Photometric redshifts (photo-zʼs) are an essential part of every cosmological science goal of the Large Synoptic Survey Telescope (LSST), including studies of large-scale structure, weak lensing, galaxy clusters, and supernova host galaxies (Ivezić et al. 2008). This estimator is a modified version of Graham et al. 2020 for use in the RSP with the DP0.2 dataset. The color-matched nearest-neighbors (CMNN) photo-z estimator provides photometric redshifts with an accuracy that is directly dependent on (and only on) the quality of the simulated observed photometry which depends directly and only on
-								the 5σ limiting magnitudes (i.e., the LSST survey depths) (Graham et al. 2020). This makes it an ideal tool for early redshift estimation for the early photometric data from the Rubin Observatory.</p>
-								<p>Creating Test and Training Sets:<br>
-								The CMNN Estimator uses a training set with known spectroscopic redshifts to estimate photometric redshifts for a test set of galaxies. To create the training set a query is done within the Rubin Science Platform (RSP) to collect the u,g,r,z,y magnitudes of 100,000 galaxies with magnitudes between 17.0-29.0 mag. The 'i' magnitude are found observed magnitudes i >25 mag. This matches
-								the i≤25 mag "gold sample" defined by the Science Requirement Document (ls.st/lpm-17). The true redshift for each training galaxy is found from the truth summary tables of dp0.2 database. To create the test set, there are two input options for the query. One inputs a RA, DEC, and a radius from the user and performs a query within the given parameters in the RSP to collect the same data from the training set for 10,000 test galaxies. The other options inputs a diaObjectId from the user and
-								a 0.05 radius and gets the same information from all galaxies within the given parameters. The photometric error, σ rand, is given in Ivezić et al. (2019):
-								where m5 is the 5σ limiting magnitude, m is the magnitude of the galaxy, and for the LSST optical filters the values
-								for γ, are 0.037, 0.038, 0.039, 0.039, 0.04, and 0.04 for filters ugrizy, respectively.</p>
-								<p>CMNN Estimator: <br>
-								For each galaxy in the test set, the estimator identifies a color-matched subset of training galaxies by calculating the Mahalanobis distance in color-space between the test galaxy and all training galaxies. A threshold value is then applied to all
-								training-set galaxies to identify those which are well-matched in color, as defined by the percent point function (PPF): e.g., if the number of degrees of freedom Ncolor=5, PPF=68% of all training galaxies consistent with the test galaxy will
-								have DM<5.86. A training galaxy is then selected by weighing the random selection by the inverse of the DM (Graham et al. 2020) The program then returns the PhotoZ estimate and Photoz error.</p>
-								<p>Statistical Analysis:<br>
-								Of the 10,000 test galaxies in the set, only 7,409 galaxies were given a PhotoZ estimation. For the test galaxies with PhotoZ estimates, the mean PhotoZ was found to be 0.945 with a standard deviation of 0.467. The PhotoZ estimates are plotted against the True Z values in the figure above.</p>
+								<span class="image main"><img src="images/Potential_Host_Galaxies4.png" alt="" /></span>
+								<center><b><font size="5"><a name="metal">Rubin Observitory Data Preview Delagate</a></b></font></center>
+								<p>During the summer of 2022, I participated in my first research project with Dr. Brian Morsony as a delegate to 
+								the Rubin Observatory data preview. The overall goal of the project was to provide simulated data to students and 
+								physicists to test the Legacy Survey of Space and Time (LSST) data pipelines to be able to prepare to perform science 
+								once real data comes in. I was tasked with trying to adapt a Color Match Nearest Neighbor (CMNN) PhotoZ estimator using 
+								Rubins dp0.2 data preview. I then estimated the PhotoZ of the simulated galaxies and used this to associate transients 
+								with a likely host galaxy. This will be a potentially useful tool once Rubin starts collecting real data to be able to 
+								quickly narrow potential transient host galaxies as well as potentially determine the redshift for those galaxies unmatched 
+								to spectral data. I presented this project as an iPoster at the AAS conference in January and at the April APS meeting. </p>
+								<span class="image main"><img src="images/IaHist.png" alt="" /></span>
+								<center><b><font size="5"><a name="metal">FOAMS</a></b></font></center>
+								<p> join his Fitting Observed Abundances to Metals from Supernovae or FOAMS project. The FOAMS program takes abundance observations 
+								from celestial objects and, using simulated nucleosynthesis models from supernovae and AGB stars, determines the ratio of Type-Ia 
+								to core-collapse supernovae. My goal was to retrieve abundance data from the APOGEE survey of the milk way stars and run it through 
+								the FOAMS program. Now that we have a large sample size of stars to run through FOAMS, we can begin to analyze the results, determining
+								which elements are most necessary to determine a realistic supernovae ratio as well as which of the supernovae models are most effective. 
+								I look forward to continuing to work on this project, hoping to see it completed and submit it for publication. </p>
+								<span class="image main"><img src="images/JET_RAM.gif" alt="" /></span>
+								<center><b><font size="5"><a name="metal">CMAP Summer School</a></b></font></center>
+								<p>I attended the Discovery Science Center Summer School for Matter at Extreme Conditions in the Laboratory and the Cosmos hosted 
+								virtually by the Center for Mass at Atomic Pressure. This was a weeklong crash course in magnetohydrodynamics (MHD) and simulation
+								programming with 20 other undergraduates from around the country. I learned how to code and apply the ordinary differential equations 
+								learned in class in python. At the end of the week, we were grouped up and were given simulation codes to manipulate. The first was particle 
+								interactions with MHD and the second was a MHD jet. We were tasked with manipulating the parameters such as density and flux, to see how 
+								flow rate and particle interactions changed. It was an amazing experience, not only to see how the concepts learned in class are applied in 
+								the real world but to be able to interact with other physics students from all over the United States.  </p>
 							</article>
 
 						<!-- About -->
