--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">About Me</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic01.jpg" alt="" width="400" height="400" /></span>
 								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
 							</article>
@@ -55,9 +55,9 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Research</h2>
-								<span class="image main"><img src="images/Potential_Host_Galaxies4.png" alt="" /></span>
+								<span class="image main"><img src="images/Potential_Host_Galaxies4.png" alt="" width="400" height="400"/></span>
 								<center><b><font size="5"><a name="metal">Rubin Observitory Data Preview Delagate</a></b></font></center>
-								<p>During the summer of 2022, I participated in my first research project with Dr. Brian Morsony as a delegate to 
+								<p>Starting in the summer of 2022, I participated in my first research project with Dr. Brian Morsony as a delegate to 
 								the Rubin Observatory data preview. The overall goal of the project was to provide simulated data to students and 
 								physicists to test the Legacy Survey of Space and Time (LSST) data pipelines to be able to prepare to perform science 
 								once real data comes in. I was tasked with trying to adapt a Color Match Nearest Neighbor (CMNN) PhotoZ estimator using 
@@ -65,9 +65,9 @@
 								with a likely host galaxy. This will be a potentially useful tool once Rubin starts collecting real data to be able to 
 								quickly narrow potential transient host galaxies as well as potentially determine the redshift for those galaxies unmatched 
 								to spectral data. I presented this project as an iPoster at the AAS conference in January and at the April APS meeting. </p>
-								<span class="image main"><img src="images/IaHist.png" alt="" /></span>
+								<span class="image main"><img src="images/IaHist.png" alt="" width="350" height="400"/></span>
 								<center><b><font size="5"><a name="metal">FOAMS</a></b></font></center>
-								<p> join his Fitting Observed Abundances to Metals from Supernovae or FOAMS project. The FOAMS program takes abundance observations 
+								<p> In fall 2022, I joined Dr. Brian Morsony's Fitting Observed Abundances to Metals from Supernovae or FOAMS project. The FOAMS program takes abundance observations 
 								from celestial objects and, using simulated nucleosynthesis models from supernovae and AGB stars, determines the ratio of Type-Ia 
 								to core-collapse supernovae. My goal was to retrieve abundance data from the APOGEE survey of the milk way stars and run it through 
 								the FOAMS program. Now that we have a large sample size of stars to run through FOAMS, we can begin to analyze the results, determining
