--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Research</h2>
+								<span class="image main"><img src="images/3d_nospin2.png" alt="" /></span>
+								<center><b><font size="5"><a name="metal">GRMHD Simulations of Non-Spinning Collapsar Black Holes</a></b></font></center>
+								<p>During graduate school at the City University of New York (CUNY), I began my master’s thesis under the guidance of Dr. Ore Gottlieb at the Center for 
+								Computational Astrophysics (CCA) at the Flatiron Institute. My research has focused on analyzing the outflows from core-collapse supernovae (CCSNe) 
+								that collapse directly into black holes (BHs). Using the 3D general-relativistic magnetohydrodynamic (GRMHD) simulation code HAMR, I investigated collapsars with 
+								varying initial natal spins of the BH. One of my key findings was that even non-rotating BHs can produce subrelativistic outflows, driven by the angular 
+								momentum from the accretion disk that forms shortly after collapse. These outflows eventually reach the original stellar surface, unbinding the star as it 
+								expands into the interstellar medium. Notably, this is the first simulation of its kind to show outflows purely driven by the accretion disk breaking out
+								of the star. This work will help bridge the gap between non-relativistic (spherical collapse) and relativistic (Gamma-Ray Bursts, GRBs) CCSNe. 
+								This research culminated in my first first-author publication, as well as my master’s thesis. Throughout this process, I developed skills in simulations and supercomputing.  </p>
 								<span class="image main"><img src="images/Potential_Host_Galaxies4.png" alt="" width="400" height="400"/></span>
 								<center><b><font size="5"><a name="metal">Rubin Observitory Data Preview Delagate</a></b></font></center>
 								<p>Starting in the summer of 2022, I participated in my first research project with Dr. Brian Morsony as a delegate to 
@@ -73,15 +83,7 @@
 								the FOAMS program. Now that we have a large sample size of stars to run through FOAMS, we can begin to analyze the results, determining
 								which elements are most necessary to determine a realistic supernovae ratio as well as which of the supernovae models are most effective. 
 								I look forward to continuing to work on this project, hoping to see it completed and submit it for publication. </p>
-								<span class="image main"><img src="images/JET_RAM.gif" alt="" /></span>
-								<center><b><font size="5"><a name="metal">CMAP Summer School</a></b></font></center>
-								<p>I attended the Discovery Science Center Summer School for Matter at Extreme Conditions in the Laboratory and the Cosmos hosted 
-								virtually by the Center for Mass at Atomic Pressure. This was a weeklong crash course in magnetohydrodynamics (MHD) and simulation
-								programming with 20 other undergraduates from around the country. I learned how to code and apply the ordinary differential equations 
-								learned in class in python. At the end of the week, we were grouped up and were given simulation codes to manipulate. The first was particle 
-								interactions with MHD and the second was a MHD jet. We were tasked with manipulating the parameters such as density and flux, to see how 
-								flow rate and particle interactions changed. It was an amazing experience, not only to see how the concepts learned in class are applied in 
-								the real world but to be able to interact with other physics students from all over the United States.  </p>
+								
 							</article>
 
 						<!-- About -->
