--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Justin Bopp, B.S.</h1>
-								<p>Master's Student in Astrophysics at CUNY Graduate Center
-								<br>Visiting Scientist at American Museum of Natural History
-								<br>Guest Researcher at Center for Computational Astrophysics</p>
+								<h1>Justin Bopp</h1>
+								<p>PhD Student in Astrophysics & Computational Mathematics, Science and Engineering Michigan State University
+								<br>Michigan State University </p>
 							</div>
 						</div>
 						<nav>
@@ -387,3 +386,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
