--- a/index.html
+++ b/index.html
@@ -1,112 +1,124 @@
 <!DOCTYPE HTML>
+<!--
+    Dimension by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<head>
-    <title>Justin Bopp</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-</head>
-<body class="is-preload">
+    <head>
+        <title>Justin Bopp</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    </head>
+    <body class="is-preload">
 
-    <!-- Wrapper -->
-    <div id="wrapper">
+        <!-- Wrapper -->
+        <div id="wrapper">
 
-        <!-- Header -->
-        <header id="header">
-            <div class="image">
-                <span class="image avatar">
-                    <img src="images/Headshot.jpg" alt="Justin Bopp">
-                </span>
-            </div>
-            <div class="content">
-                <div class="inner">
-                    <h1>Justin Bopp</h1>
-                    <p>PhD Student in Astrophysics & Computational Mathematics, Science and Engineering<br>Michigan State University</p>
+            <!-- Header -->
+            <header id="header">
+                <div class="image">
+                    <span class="image avatar"><img src="assets/images/Headshot.jpg" alt="Justin Bopp"></span>
                 </div>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#about">About Me</a></li>
-                    <li><a href="#research">Research</a></li>
-                    <li><a href="images/CV.pdf">CV</a></li>
-                </ul>
-            </nav>
-        </header>
-
-        <!-- Main -->
-        <div id="main">
-
-            <!-- About -->
-            <article id="about">
-                <h2 class="major">About Me</h2>
-                <span class="image main"><img src="images/pic01.jpg" alt="Justin working on simulations"></span>
-                <p>I am a Ph.D. student at Michigan State University studying compact objects, relativistic phenomena, and the explosive deaths of massive stars. My research bridges high-energy astrophysics, numerical simulations, and observable cosmic signatures.</p>
-                <p>Previously, at CUNY for my master’s degree, I studied core-collapse supernovae collapsing into black holes using 3D GRMHD simulations. My work showed that even non-spinning black holes can produce subrelativistic outflows via accretion-disk dynamics, unbinding the stellar envelope and connecting spherical core-collapse to relativistic gamma-ray bursts. This formed my master’s thesis and first first-author publication.</p>
-                <p>I’m also passionate about mentorship and outreach, working with programs like AstroCom NYC and MSU Stellar Mentorship, and organizing public events like CSUS Astronomy Night to make astrophysics accessible and inspire future scientists.</p>
-            </article>
-
-            <!-- Research Gallery -->
-            <article id="research">
-                <h2 class="major">Research Gallery</h2>
-
-                <!-- 3D Simulation Video -->
-                <div class="gallery-item">
-                    <video controls>
-                        <source src="assets/videos/AMR_0spin presentation (1).mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                    <p><b>Full 3D Simulation of a Zero-Spin Collapsar:</b> Visualization of the outflows from a non-rotating black hole collapsar, highlighting the accretion-disk-driven dynamics unbinding the star.</p>
-                </div>
-
-                <!-- Magnetic Flux Comparison -->
-                <div class="gallery-item">
-                    <h3>Magnetic Flux Eruption Comparison</h3>
-                    <div class="video-grid">
-                        <video controls><source src="assets/videos/compare1.mp4" type="video/mp4"></video>
-                        <video controls><source src="assets/videos/compare2.mp4" type="video/mp4"></video>
-                        <video controls><source src="assets/videos/compare3.mp4" type="video/mp4"></video>
-                        <video controls><source src="assets/videos/compare4.mp4" type="video/mp4"></video>
+                <div class="content">
+                    <div class="inner">
+                        <h1>Justin Bopp</h1>
+                        <p>PhD Student in Astrophysics & Computational Mathematics<br>
+                        Michigan State University</p>
                     </div>
-                    <p>These four videos compare magnetic flux eruptions at different timesteps, showing the evolution of field structures and instabilities during the collapsar outflows.</p>
                 </div>
+                <nav>
+                    <ul>
+                        <li><a href="#intro">About Me</a></li>
+                        <li><a href="#work">Research</a></li>
+                        <li><a href="assets/images/CV.pdf">CV</a></li>
+                    </ul>
+                </nav>
+            </header>
 
-                <!-- Magnetic Flux Side-by-Side Images -->
-                <div class="gallery-item">
-                    <h3>Toroidal vs Poloidal Magnetic Flux</h3>
-                    <div class="image-grid">
-                        <img src="assets/images/xy_bpol_tor_D2456 (2).png" alt="Toroidal vs Poloidal Magnetic Flux XY-plane">
-                        <img src="assets/images/xz_bpol_tor_D2456 (2).png" alt="Toroidal vs Poloidal Magnetic Flux XZ-plane">
+            <!-- Main -->
+            <div id="main">
+
+                <!-- About Me -->
+                <article id="intro">
+                    <h2 class="major">About Me</h2>
+                    <span class="image main"><img src="assets/images/pic01.jpg" alt="About Me"></span>
+                    <p>I am a Ph.D. student in Astrophysics & Computational Mathematics, Science and Engineering at 
+                    Michigan State University, studying compact objects, relativistic phenomena, and the explosive 
+                    deaths of massive stars. My research spans high-energy astrophysics, numerical simulations, 
+                    and connecting theoretical models to observable cosmic phenomena.</p>
+                    <p>Previously, I completed my master’s degree at CUNY under Dr. Ore Gottlieb at the Flatiron Institute. 
+                    I explored outflows from core-collapse supernovae forming black holes using 3D GRMHD simulations. 
+                    This work demonstrated that even non-spinning black holes can drive subrelativistic outflows, 
+                    bridging the gap between spherical CCSNe and relativistic jets in gamma-ray bursts. 
+                    This research became my master’s thesis and first first-author publication.</p>
+                    <p>Outside research, I mentor students, organize outreach events, and promote equity in STEM, 
+                    aiming to become a professor who advances science and fosters an inclusive community.</p>
+                </article>
+
+                <!-- Research -->
+                <article id="work">
+                    <h2 class="major">Research Gallery</h2>
+
+                    <!-- Full 3D Simulation -->
+                    <div class="gallery-item">
+                        <video controls>
+                            <source src="assets/videos/AMR_0spin presentation (1).mp4" type="video/mp4">
+                        </video>
+                        <p><b>Full 3D Zero-Spin Collapsar Simulation:</b> Visualizing outflows from a non-rotating black hole collapsar, showing accretion disk-driven unbinding of the star.</p>
                     </div>
-                    <p>Side-by-side comparison of toroidal and poloidal magnetic flux components in the collapsar simulation, illustrating the anisotropy and spatial distribution of the fields.</p>
-                </div>
 
-                <!-- Inner Jet Section -->
-                <div class="gallery-item">
-                    <video controls>
-                        <source src="assets/videos/single.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                    <p><b>2D Inner Jet Section:</b> Focused view of the innermost jet region, highlighting dynamics near the black hole and the early stages of jet collimation.</p>
-                </div>
+                    <!-- Magnetic Flux Comparison -->
+                    <div class="gallery-item">
+                        <h3>Magnetic Flux Eruption Comparison</h3>
+                        <div class="video-grid">
+                            <video controls><source src="assets/videos/compare1.mp4" type="video/mp4"></video>
+                            <video controls><source src="assets/videos/compare2.mp4" type="video/mp4"></video>
+                            <video controls><source src="assets/videos/compare3.mp4" type="video/mp4"></video>
+                            <video controls><source src="assets/videos/compare4.mp4" type="video/mp4"></video>
+                        </div>
+                        <p>Comparison of magnetic flux eruptions over different timesteps, highlighting field evolution during outflows.</p>
+                    </div>
 
-            </article>
+                    <!-- Toroidal vs Poloidal Flux -->
+                    <div class="gallery-item">
+                        <h3>Toroidal vs Poloidal Magnetic Flux</h3>
+                        <div class="image-grid">
+                            <img src="assets/images/xy_bpol_tor_D2456 (2).png" alt="XY-plane Toroidal vs Poloidal">
+                            <img src="assets/images/xz_bpol_tor_D2456 (2).png" alt="XZ-plane Toroidal vs Poloidal">
+                        </div>
+                        <p>Side-by-side comparison of toroidal and poloidal magnetic flux in the simulation, showing spatial distribution differences.</p>
+                    </div>
+
+                    <!-- Inner Jet Section -->
+                    <div class="gallery-item">
+                        <video controls>
+                            <source src="assets/videos/single.mp4" type="video/mp4">
+                        </video>
+                        <p><b>2D Inner Jet Section:</b> Zoomed-in view of the innermost jet region, highlighting collimation and dynamics near the black hole.</p>
+                    </div>
+                </article>
+
+            </div>
+
+            <!-- Footer -->
+            <footer id="footer">
+                <p class="copyright">&copy; Justin Bopp. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+            </footer>
 
         </div>
 
-        <!-- Footer -->
-        <footer id="footer">
-            <p class="copyright">&copy; Justin Bopp. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-        </footer>
+        <!-- BG -->
+        <div id="bg"></div>
 
-    </div>
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-
-</body>
+    </body>
 </html>
